welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:8: error: type mismatch;
 found   : Unit
 required: Int
  */G(1) = 1
         ^